--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,10 +1,12 @@
 id: btcpayserver
 title: BTCPay Server
-version: 1.7.9
+version: 1.7.11
 release-notes: |
   * Includes upstream releases for: 
-    - [v1.7.8](https://github.com/btcpayserver/btcpayserver/releases/tag/v1.7.8), which includes migration to postgres database. 
-    - [v1.7.9](https://github.com/btcpayserver/btcpayserver/releases/tag/v1.7.9), which includes several bugfixes.
+    - [v1.7.8](https://github.com/btcpayserver/btcpayserver/releases/tag/v1.7.8) - includes migration to postgres database. 
+    - [v1.7.9](https://github.com/btcpayserver/btcpayserver/releases/tag/v1.7.9) - several bugfixes .
+    - [v1.7.10](https://github.com/btcpayserver/btcpayserver/releases/tag/v1.7.10 - migration fix for restarts.
+    - [v1.7.11](https://github.com/btcpayserver/btcpayserver/releases/tag/v1.7.10) - misc bugfixes.
   * Migrates database to postgres since sqlite is no longer supported - migration does not include plugin data.
 license: mit
 wrapper-repo: "https://github.com/Start9Labs/btcpayserver-wrapper"
