--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,6 +1,6 @@
 id: btcpayserver
 title: BTCPay Server
-version: 1.8.1
+version: 1.8.2
 release-notes: |
   * Includes upstream releases for: 
     - [v1.7.8](https://github.com/btcpayserver/btcpayserver/releases/tag/v1.7.8) - includes migration to postgres database
@@ -10,6 +10,7 @@ release-notes: |
     - [v1.7.12](https://github.com/btcpayserver/btcpayserver/releases/tag/v1.7.12) - misc bugfixes
     - [v1.8.0](https://github.com/btcpayserver/btcpayserver/releases/tag/v1.8.0) - major store updates and other UI improvements
     - [v1.8.1](https://github.com/btcpayserver/btcpayserver/releases/tag/v1.8.1) - misc bugfixes
+    - [v1.8.2](https://github.com/btcpayserver/btcpayserver/releases/tag/v1.8.2) - database migration bugfix
   * Migrates database to postgres since sqlite is no longer supported - migration does not include plugin data
 license: mit
 wrapper-repo: "https://github.com/Start9Labs/btcpayserver-wrapper"
