--- a/utils/nginx.conf
+++ b/utils/nginx.conf
@@ -15,6 +15,8 @@ server {
                 proxy_pass http://0.0.0.0:23000;
                 proxy_set_header X-Forwarded-Proto https;
                 proxy_set_header Host $http_host;
-
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection "upgrade";
         }
 }
