--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,8 +1,9 @@
 id: btcpayserver
 title: BTCPay Server
-version: 1.9.1
+version: 1.10.2
 release-notes: |
-  * Updates to upstream release of [v1.9.1](https://github.com/btcpayserver/btcpayserver/releases/tag/v1.9.1) which includes the minor release of [v1.9.0](https://github.com/btcpayserver/btcpayserver/releases/tag/v1.9.0)
+  * Updates to the upstream release of [v1.10.2](https://github.com/btcpayserver/btcpayserver/releases/tag/v1.10.2)
+  * Includes the minor release of [v1.10.0](https://github.com/btcpayserver/btcpayserver/releases/tag/v1.10.0) which has some great new features!
 license: mit
 wrapper-repo: "https://github.com/Start9Labs/btcpayserver-wrapper"
 upstream-repo: "https://github.com/btcpayserver/btcpayserver"
