--- a/.github/workflows/buildService.yml
+++ b/.github/workflows/buildService.yml
@@ -16,24 +16,29 @@ jobs:
       - name: Prepare StartOS SDK
         uses: Start9Labs/sdk@v1
 
-      - name: Checkout services repository
-        uses: actions/checkout@v3
-
       - name: Checkout cross build
         uses: actions/checkout@v2
         with:
           repository: Start9Labs/rust-musl-cross
           path: rust-musl-cross
+      
+      - name: Build rust-musl-builder
+        run: |
+          chmod a+x ${{ github.workspace }}/rust-musl-cross/build.sh
+          ./${{ github.workspace }}/rust-musl-cross/build.sh
+        shell: bash
 
+      - name: Build md-packer
+        run: cargo install --git=https://github.com/Start9Labs/md-packer.git --branch=main
+
+      - name: Checkout services repository
+        uses: actions/checkout@v3
+      
       - name: Build the service package
         id: build
         run: |
           git submodule update --init --recursive
           start-sdk init
-          cargo install --git=https://github.com/Start9Labs/md-packer.git --branch=main
-          ./${{ github.workspace }}/rust-musl-cross/build.sh
-          rust-musl-builder cargo build --release
-          rust-musl-builder musl-strip target/aarch64-unknown-linux-musl/release/<bin-name>
           make
           PACKAGE_ID=$(yq -oy ".id" manifest.*)
           echo "::set-output name=package_id::$PACKAGE_ID"
