--- a/.github/workflows/buildService.yml
+++ b/.github/workflows/buildService.yml
@@ -24,8 +24,8 @@ jobs:
       
       - name: Build rust-musl-builder
         run: |
-          chmod a+x build.sh
-          ./build.sh
+          chmod a+x rust-musl-cross/build.sh
+          ./rust-musl-cross/build.sh
         shell: bash
 
       - name: Build md-packer
