--- a/.github/workflows/releaseService.yml
+++ b/.github/workflows/releaseService.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           PACKAGE_ID=${{ steps.package.outputs.package_id }}
           echo "## What's Changed" > change-log.txt
-          yq e '.release-notes' manifest.yaml >> change-log.txt
+          yq -oy '.release-notes' manifest.* >> change-log.txt
           echo "## SHA256 Hash" >> change-log.txt
           echo '```' >> change-log.txt
           sha256sum ${PACKAGE_ID}.s9pk >> change-log.txt
