--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,9 +1,9 @@
 id: btcpayserver
 title: BTCPay Server
-version: 1.12.4
+version: 1.13.0
 release-notes: |
-  * Updates to the upstream release of [v1.12.4](https://github.com/btcpayserver/btcpayserver/releases/tag/v1.12.4), which includes the noteworthy minor release of [v1.12.0](https://github.com/btcpayserver/btcpayserver/releases/tag/v1.12.0), as well as various bug fixes, improvements, and new features.
-  * If you are using plugins, you will most likely find them disabled after this update, because new versions compatible with BTCPay Server v1.12.x are required. Please see the "Manage Plugins" section once updated.
+  * Updates to the upstream release of [v1.13.0](https://github.com/btcpayserver/btcpayserver/releases/tag/v1.13.0), which includes various bug fixes, improvements, and new features.
+  * Bumps version bounds for C-Lightning
 license: mit
 wrapper-repo: "https://github.com/Start9Labs/btcpayserver-wrapper"
 upstream-repo: "https://github.com/btcpayserver/btcpayserver"
@@ -82,7 +82,7 @@ dependencies:
     description: Used to communicate with the Lightning Network.
     config: ~
   c-lightning:
-    version: ">=0.10.0.1 <24.0"
+    version: ">=0.10.0.1 <26.0"
     requirement:
       type: "opt-in"
       how: Optionally use Core Lightning for internal lightning network node implementation.
