--- a/configurator/src/templates/settings-btcpay.config.template
+++ b/configurator/src/templates/settings-btcpay.config.template
@@ -17,3 +17,11 @@ sqlitefile=sqlite.db
 BTC.explorer.cookiefile=/datadir/nbxplorer/Main/.cookie
 #BTC.lightning=/root/.lightning/lightning-rpc
 #BTC.lightning=https://apitoken:API_TOKEN_SECRET@charge.example.com/
+
+### Monero settings ###
+XMR_daemon_uri=http://monerod.embassy:18081
+XMR_wallet_daemon_uri=http://127.0.0.1:18082
+XMR_wallet_daemon_walletdir=~/.bitmonero/wallets
+# Only use username and password if node's RPC is password protected
+XMR_daemon_username={monero_username}
+XMR_daemon_password={monero_password}
