--- a/configurator/src/templates/settings-btcpay.config.template
+++ b/configurator/src/templates/settings-btcpay.config.template
@@ -1,5 +1,6 @@
 ### Global settings ###
 network=mainnet
+chains=xmr
 
 ### Server settings ###
 port=23000
@@ -20,8 +21,8 @@ BTC.explorer.cookiefile=/datadir/nbxplorer/Main/.cookie
 
 ### Monero settings ###
 XMR_daemon_uri=http://monerod.embassy:18081
-XMR_wallet_daemon_uri=http://127.0.0.1:18082
-XMR_wallet_daemon_walletdir=~/.bitmonero/wallets
+XMR_wallet_daemon_uri=http://monerod.embassy:18082
+XMR_wallet_daemon_walletdir=/mnt/monerod/.bitmonero/wallets
 # Only use username and password if node's RPC is password protected
 XMR_daemon_username={monero_username}
 XMR_daemon_password={monero_password}
