update config for monero dep

--- a/manifest.yaml
+++ b/manifest.yaml
@@ -2,7 +2,7 @@ id: btcpayserver
 title: BTCPay Server
 version: 1.13.5.1
 release-notes: |
-  * Adds Monero support
+  * Adds optional Monero integration for payment processing
 license: mit
 wrapper-repo: "https://github.com/Start9Labs/btcpayserver-wrapper"
 upstream-repo: "https://github.com/btcpayserver/btcpayserver"
@@ -28,6 +28,7 @@ main:
   mounts:
     lnd: /mnt/lnd
     c-lightning: "/mnt/c-lightning"
+    monerod: "/mnt/monerod"
     main: /datadir
 health-checks:
   explorer-synced:
@@ -109,6 +110,12 @@ volumes:
     volume-id: main
     path: "/shared"
     readonly: true
+  monerod:
+    type: pointer
+    package-id: monerod
+    volume-id: main
+    path: "/data"
+    readonly: false
 alerts:
   install: 
     <p>BTCPay is a self hosted payment processing system. No third party exists to backup data. You are responsible for backups of all your information!</p>
