get monero config working and add migration

--- a/manifest.yaml
+++ b/manifest.yaml
@@ -114,7 +114,7 @@ volumes:
     type: pointer
     package-id: monerod
     volume-id: main
-    path: "/data"
+    path: "/"
     readonly: false
 alerts:
   install: 
