add dependency config checks for monero

--- a/manifest.yaml
+++ b/manifest.yaml
@@ -96,7 +96,11 @@ dependencies:
       type: "opt-in"
       how: Optionally use Monero.
     description: Used as an alternative integration for payment processing.
-    config: ~
+    config:
+      check:
+        type: script
+      auto-configure:
+        type: script
 volumes:
   main:
     type: data
