--- a/utils/config/monero-wallet-rpc.btcpayserver.conf.template
+++ b/utils/config/monero-wallet-rpc.btcpayserver.conf.template
@@ -5,19 +5,23 @@
 
 trusted-daemon=1
 daemon-host=monerod.embassy
-daemon-port=18081
+daemon-port=18089
+disable-rpc-login=1
 
-wallet-file=MONERO_BTCPAY_WALLET_DIR/wallet
-password-file=MONERO_BTCPAY_WALLET_DIR/password
-log-file=MONERO_MOUNT_DIR/logs/monero-wallet-rpc.btcpayserver.log
+wallet-dir=MONERO_BTCPAY_WALLET_DIR
+#wallet-file=MONERO_BTCPAY_WALLET_DIR/wallet
+#password-file=MONERO_BTCPAY_WALLET_DIR/password
+log-file=logs/monero-wallet-rpc.btcpayserver.log
+#log-level=2
 max-log-file-size=10000000 #10MiB
 max-log-files=2
 
 #confirm-external-bind=1
+#rpc-bind-ip=0.0.0.0
 rpc-bind-ip=127.0.0.1
 rpc-bind-port=MONERO_BTCPAY_WALLET_RPC_PORT
 
-shared-ringdb-dir=/datadir/btcpayserver/altcoins/monero
+shared-ringdb-dir=MONERO_DIR
 
 MONERO_DAEMON_RPC_CREDENTIALS
 
