--- a/package.json
+++ b/package.json
@@ -5,15 +5,14 @@
     "check": "tsc --noEmit"
   },
   "dependencies": {
-    "@start9labs/start-sdk": "0.4.0-rev0.lib0.rc5",
+    "@start9labs/start-sdk": "0.3.6-alpha.12",
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
-    "@types/js-yaml": "^4.0.5",
-    "@types/node": "^20.0.0",
-    "@vercel/ncc": "^0.36.1",
-    "prettier": "^2.8.4",
-    "typescript": "^4.9.5"
+    "@types/node": "^22.1.0",
+    "@vercel/ncc": "^0.38.1",
+    "prettier": "^3.2.5",
+    "typescript": "^5.4.3"
   },
   "prettier": {
     "trailingComma": "all",
