--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@types/node": "^22.1.0",
     "@vercel/ncc": "^0.38.1",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.3"
+    "typescript": "^5.4.3",
+    "bitcoind-startos": "git+https://github.com/Start9Labs/bitcoind-startos.git#update/036"
   },
   "prettier": {
     "trailingComma": "all",
