--- a/manifest.yaml
+++ b/manifest.yaml
@@ -2,7 +2,9 @@ id: btcpayserver
 title: BTCPay Server
 version: 2.0.0
 release-notes: |
-  * Major upstream release of [v2.0.0](https://github.com/btcpayserver/btcpayserver/releases/tag/v2.0.0).
+  * Major upstream release of [v2.0.0](https://github.com/btcpayserver/btcpayserver/releases/tag/v2.0.0)! This release introduces many new features and some breaking changes. Please see the [blog post](https://blog.btcpayserver.org/btcpay-server-2-0/) for more details.
+  * Please note: large instances may experience a few minutes of database migration.
+  * 
 license: mit
 wrapper-repo: "https://github.com/Start9Labs/btcpayserver-wrapper"
 upstream-repo: "https://github.com/btcpayserver/btcpayserver"
