Add monero support (#61)
* base setup for monero

* update config for monero dep

* try different port

* get monero config working and add migration

* add dependency config checks for monero

* fix version and migrations

* fix nginx upload limit and misc

* add monero wallet rpc

* todo note

* Feat/monero (for comparison) (#67)

* monero-wallet-rpc service

* Fix s6 services dependencies

* fixup, tidyup things

* Fixup permissions for monero-wallet-rpc

* Final touchups I think

* Final arrangements#git commit -S -m Final

* Final touchups\! (minus the final, final ones\!)

* update config to handle multiple altcoin options

* fix check

* whoops typo

---------

Co-authored-by: Lucy Cifferello <12953208+elvece@users.noreply.github.com>

* update instructions

* fix bug with saving monero node creds to template

* Fixup final(?) monerod/monero-wallet-rpc settings

* Move disable-rpc-login to .conf file

* Fixup monero-wallet-rpc awaiting wallet files

* Adjust sleep time to something more reasonable, comments phrasing

* rework to read monero rpc creds from monero's config

* fixes for wallet rpc and update version

* remove redundant flag

* fix build

* adjust migrations

* update instructions

* rework wallet rpc config for fresh setups

* update to upstream 2.0.3

---------

Co-authored-by: gStart9 <106188942+gStart9@users.noreply.github.com>
Co-authored-by: gStart9 <george@start9labs.com>

--- a/configurator/src/templates/settings-btcpay.config.template
+++ b/configurator/src/templates/settings-btcpay.config.template
@@ -1,5 +1,6 @@
 ### Global settings ###
 network=mainnet
+chains={chains}
 
 ### Server settings ###
 port=23000
@@ -17,3 +18,11 @@ sqlitefile=sqlite.db
 BTC.explorer.cookiefile=/datadir/nbxplorer/Main/.cookie
 #BTC.lightning=/root/.lightning/lightning-rpc
 #BTC.lightning=https://apitoken:API_TOKEN_SECRET@charge.example.com/
+
+### Monero settings ###
+XMR_daemon_uri=http://monerod.embassy:18089
+XMR_wallet_daemon_uri=http://127.0.0.1:18082
+XMR_wallet_daemon_walletdir=/datadir/btcpayserver/altcoins/monero/wallets
+# Only use username and password if Monero daemon's RPC is password protected
+XMR_daemon_username={monero_username}
+XMR_daemon_password={monero_password}
