--- a/utils/config/nginx.conf
+++ b/utils/config/nginx.conf
@@ -1,6 +1,7 @@
 server {
         listen 80 default_server;
         listen [::]:80 default_server;
+        client_max_body_size 100M;
 
 
         location /notifications/subscribeupdates {
