--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "check": "tsc --noEmit"
   },
   "dependencies": {
-    "@start9labs/start-sdk": "0.3.6-alpha.12",
+    "@start9labs/start-sdk": "0.3.6-beta.1",
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
